--- a/mlp/pom.xml
+++ b/mlp/pom.xml
@@ -28,6 +28,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openpnp/opencv -->
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.2.0-1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
